--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>3.5.4</version>
         <relativePath/>
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>jobrunr-demo</artifactId>
+    <groupId>vn.vnpt</groupId>
+    <artifactId>billing</artifactId>
     <version>1.0</version>
-    <name>jobrunr-demo</name>
-    <description>JobRunr Demo with SQLite</description>
+    <name>billing</name>
+    <description>JobRunr Billing with SQLite</description>
 
     <properties>
         <java.version>21</java.version>
@@ -27,25 +27,44 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
-
-        <!-- JobRunr dependencies -->
         <dependency>
             <groupId>org.jobrunr</groupId>
             <artifactId>jobrunr-spring-boot-3-starter</artifactId>
             <version>${jobrunr.version}</version>
         </dependency>
-
-        <!-- SQLite driver - MUST be included -->
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>${sqlite.version}</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>FSSServerLib</groupId>
+            <artifactId>FSSServerLib</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/FSSServerLib.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>ojdbc6-11.2.0.3</groupId>
+            <artifactId>ojdbc6-11.2.0.3</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/ojdbc6-11.2.0.3.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.6</version>
         </dependency>
     </dependencies>
 
@@ -54,6 +73,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <includeSystemScope>true</includeSystemScope>
+                    <layers>
+                        <enabled>true</enabled>
+                    </layers>
+                    <mainClass>vn.vnpt.billing.BillingApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
